- CSS admin fix for BE logo cutting off with short blog name.

--- a/BlogEngine/BlogEngine.NET/admin/style.css
+++ b/BlogEngine/BlogEngine.NET/admin/style.css
@@ -30,8 +30,8 @@ label.wide {float: left;display: block;}
 /* ------------------------------*/
 .header {width: 100%; height: 60px; min-width:980px;}
 .toolbox {width: 450px; float:right; overflow:hidden; text-align: right; margin-top:20px; margin-right:40px; }
-.be-logo { background: url( '../pics/logo.png' ) 40px 0px no-repeat; height: 60px;  margin: 0; float: left; }
-.be-logo span { position: relative; top: 20px; left: 210px; font-size:18px; font-weight:bold; }
+.be-logo { background: url( '../pics/logo.png' ) 40px 0px no-repeat; height: 60px;  margin: 0; float: left; padding: 0 0 0 220px; }
+.be-logo span { position: relative; top: 20px; font-size:18px; font-weight:bold; }
 
 /* Content */
 /* ------------------------------*/
